fix: align home page image to top
- Set align-self to start for featured-image containers
- Add explicit margin and display rules for about-section images

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -74,6 +74,8 @@ h1, h2, h3, h4, h5, h6 {
 .about-section .featured-image img {
   width: 100%;
   max-width: 320px;
+  display: block;
+  margin: 0;
 }
 
 .intro-text {
@@ -166,7 +168,7 @@ h1, h2, h3, h4, h5, h6 {
   width: 100%;
   height: auto;
   justify-self: center;
-  align-self: center;
+  align-self: start;
 }
 
 .page-content .featured-image img {
